--- a/index.html
+++ b/index.html
@@ -1,11 +1,56 @@
 <!doctype html>
 <html>
 <head>
-    <title>this is practice</title>
+    <title>Fehér Sándor</title>
+    <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h1>this is a big header for you all</h1>
-    <p>this is a paragraph for some practice material</p>
+    <!-- portrait -->
+    <img src="images/portrait.jpg" alt="portrait">
+    <!-- header sht -->
+    <h1>Fehér Sándor</h1>
+    <h2>Önéletrajz</h2>
+    <!-- contact details -->
+    <div class="contact">
+            <p>Telefonszám: 06 70 36 66 099</p>
+            <p>E-mail: papahadacow@gmail.com</p>
+            <p>Születési hely/idő: Budapest 1990 12 16</p>
+    </div>
+    <!-- studyies -->
+    <div class="studies">
+        <h2>Tanulmányok</h2>
+        <p>
+            2018 Green Fox Academy - Junior Szoftverfejlesztő <br />
+            2013-2014 MZTSZ Kőbányai zenei stúdió - Szórakoztató zenész 1
+                Előadóművész + Pedagógus <br />
+                2009-2013 MZTSZ Kőbányai Zenei Stúdió Szórakoztató zenész 2 <br />
+                2004-2009 Gundel Károly Vendéglátó ipari és idegenforgalmi SZKI
+                Érettségi <br />
+                1996-2004 II Rákóczi Ferenc Általános iskola
+        </p>
+    </div>
+    <!-- work xp -->
+    <div class="work">
+        <h2>Szakmai tapasztalatok</h2>
+        <p>
+            2016 szept. - Barhole Music - pultos <br />
+            2016 feb. – 2016 júl. Barcraft 2 e-sport bár - pultos <br ->
+            2015 okt. – 2016 jan. Barcraft e-sport bár - pultos 
+            <br />
+            2014- Depresszió zenekar - road / színpad technikus
+            <br />
+            2013 júl.-szept. Halton Clean Air kft. - összeszerelő
+            <br />
+            2011 júl.-szept. Coca Cola Company. - rakodómunkás
+            <br />
+            2010 júl.-aug. Liget falatozó - konyhai kisegítő
+        </p>
+    </div>
+    <!-- other -->
+    <div class="other">
+        <h2>Egyéb</h2>
+        <p>Angol - közpfok</p> 
+    </div>
 </body>
 </html>
