--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <title>Fehér Sándor</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
     <!-- portrait -->
     <img src="images/portrait.jpg" alt="portrait">
+</head>
+<body>
+    
     <!-- header sht -->
-    <h1>Fehér Sándor</h1>
-    <h2>Önéletrajz</h2>
+    <h1 class="nameplate">Fehér Sándor <br />Önletrajz</h1>
+    <h2>Személyes adatok</h2>
     <!-- contact details -->
     <div class="contact">
             <p>Telefonszám: 06 70 36 66 099</p>
-            <p>E-mail: papahadacow@gmail.com</p>
+            <p>E-mail: <a href="mailto:papahadacow@gmail.com">papahadacow@gmail.com</a></p>
             <p>Születési hely/idő: Budapest 1990 12 16</p>
     </div>
     <!-- studyies -->
