added an english version

--- a/index-hu.html
+++ b/index-hu.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <!-- portrait -->
     <img src="images/portrait.jpg" alt="portrait">
+    <a href="index-hu.html"><img class="huflag" src="images/hunflag.png" alt="Hungarian"></a>
+    <a href="index-en.html"><img class="enflag" src="images/ukflag.png" alt="English"></a>
 </head>
 <body>
     
