--- a/versionen.html
+++ b/versionen.html
@@ -7,7 +7,7 @@
     <!-- portrait -->
     <img src="images/portrait.jpg" alt="portrait">
     <a href="index.html"><img class="huflag" src="images/hunflag.png" alt="Hungarian"></a>
-    <a href="index-en.html"><img class="enflag" src="images/ukflag.png" alt="English"></a>
+    <a href="versionen.html"><img class="enflag" src="images/ukflag.png" alt="English"></a>
 </head>
 <body>
     
