--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <!-- portrait -->
     <img src="images/portrait.jpg" alt="portrait">
-    <a href="index.html"><img class="huflag" src="images/hunflag.png" alt="Hungarian"></a>
-    <a href="versionen.html"><img class="enflag" src="images/ukflag.png" alt="English"></a>
+    <a href="https://fehersanyi.github.io/index.html"><img class="huflag" src="images/hunflag.png" alt="Hungarian"></a>
+    <a href="https://fehersanyi.github.io/index-en.html"><img class="enflag" src="images/ukflag.png" alt="English"></a>
 </head>
 <body>
     
